# spization

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py  spization.nix
.github/.workflows/: python.yaml
benchmarking/: benchmarking.py  cost_modelling.py  graphs.py
spization/: __init__.py  normalize.py  parallel.py  serial.py  serial_parallel_decomposition.py  utilities.py
spization/__internals/general/: __init__.py
spization/__internals/graph/: __init__.py  add_node.py  add_nodes_and_edges.py  longest_path_lengths_from_source.py  lowest_common_ancestor.py  properties.py  sinks.py  sources.py  strata_sort.py
spization/__internals/sp/: __init__.py  cbc_decomposition.py  inverse_line_graph.py
spization/algorithms/: __init__.py  continous_sync.py  flexible_sync.py  is_ttsp.py  naive_strata_sync.py  pure_node_dup.py  spanish_algo.py  spanish_strata_sync.py  spanish_sync.py
spization/benchmarking/: benchmarking.py  cost_modelling.py  graphs.py
spization/modular_decomposition/: __init__.py  through_modular_decomposition.py  utils.py
spization/modular_decomposition/directed/: directed_md.py  directed_quotient_graph.py  objects.py
spization/modular_decomposition/undirected/: objects.py  undirected_md.py  undirected_md_naive.py  undirected_quotient_graph.py
spization/objects/: __init__.py  edges.py  nodes.py  splits.py
spization/sp_utils/: ancestors.py  compositions.py  digraph_from_sp.py  is_empty.py  is_valid_sp.py  nodes.py  normalize.py  serial_parallel_decomposition.py
spization/utils/: __init__.py  ancestors.py  bsp_to_sp.py  cbc_decomposition.py  compositions.py  critical_path_cost.py  dependencies_are_maintained.py  digraph_to_sp.py  duplicate_nodes.py  general_utils.py  get_ancestors.py  get_node_counter.py  get_nodes.py  get_serial_parallel_decomposition.py  graph.py  graph_utils.py  has_no_duplicate_nodes.py  is_empty.py  is_ttsp.py  is_valid_sp.py  nodes.py  normalize.py  normalize_sync_nodes.py  random_sp.py  replace_node.py  simplify_dummy_nodes.py  sp_to_bsp.py  sp_to_digraph.py  sp_to_spg.py  sp_to_ttspg.py  spd_to_ttsg.py  spg_to_sp.py  ttspg_to_spg.py  work_cost.py
spization/utils/general/: __init__.py
spization/utils/graph/: __init__.py  longest_path_lengths_from_source.py  lowest_common_ancestor.py  properties.py  sinks.py  sources.py  strata_sort.py
spization/utils/sp/: ancestors.py  compositions.py  critical_path_cost.py  digraph_from_sp.py  digraph_to_sp.py  has_no_duplicate_nodes.py  is_empty.py  is_valid_sp.py  nodes.py  (+5 more)
test/: sample_graphs.py  test_normalize.py  test_utilities.py
(+47 files in other folders)
