[tool.poetry]
name = "spization"
version = "0.1.0"
description = "Package for Graph Series-Parallel-ization"
authors = ["Marsella8 <pietromax.marsella@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
overloading = "^0.5.0"
multipledispatch = "^1.0.0"
multimethod = "^1.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = ["no-redef", "import-not-found"]


[tool.pytest.ini_options]
pythonpath = [
  ".", "spization",
]