[tool.poetry]
name = "spization"
version = "0.1.0"
description = "Package for Graph Series-Parallel-ization"
authors = ["Marsella8 <pietromax.marsella@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
multimethod = "^1.12"
loguru = "^0.7.2"
icecream = "^2.1.3"
numpy = "^2.1.0"
rich = "^13.8.0"
multiset = "^3.2.0"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"
pyinstrument = "^5.0.0"

[tool.poetry.scripts]
benchmark = "benchmarking.benchmarking:run_benchmark"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = ["no-redef", "import-not-found", "no-any-return", "attr-defined", "name-defined"]
exclude = ["test"]
no_implicit_optional = false

[tool.ruff]
lint.ignore = ["F811", "F821"]
lint.extend-select = ["I"]